--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "mongoose": "^8.3.4",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
